--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,12 +11,15 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="2dp">
+        android:layout_height="80dp"
+        android:background="@drawable/gradient_bg"
+        app:elevation="4dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/app_bar"
+            android:layout_marginTop="24dp"
             style="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -72,10 +76,10 @@
         android:id="@+id/main_fragment">
 
         <ImageView
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
             android:id="@+id/imageView"
-            android:layout_width="108dp"
-            android:layout_height="83dp"
-            app:srcCompat="@drawable/flytrax_logo_icon"
+            app:srcCompat="@drawable/joshinlines"
             android:layout_gravity="center"/>
     </FrameLayout>
 
