--- a/src/main/res/layout/fragment_logbook_full.xml
+++ b/src/main/res/layout/fragment_logbook_full.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_selector_gradient"
+    android:background="@android:color/white"
     android:orientation="vertical"
     tools:context=".Fragments.Full_Logbook_Fragment">
 
@@ -12,12 +12,11 @@
         android:id="@+id/rl_topButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="5dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_new"
@@ -25,9 +24,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
+                android:backgroundTint="@android:color/white"
                 android:text="New entry"
-                android:textColor="@android:color/holo_red_light"
-                android:backgroundTint="@android:color/black"
+                android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btn_Log_Brief"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -37,9 +36,9 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_red_light"
-                android:backgroundTint="@android:color/black"
+                android:backgroundTint="@android:color/white"
                 android:text="Summarised"
+                android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
