--- a/src/main/res/layout/fragment_quick__log.xml
+++ b/src/main/res/layout/fragment_quick__log.xml
@@ -26,12 +26,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@android:color/black">
+                    android:layout_height="match_parent">
 
                     <com.jaredrummler.materialspinner.MaterialSpinner
                         android:id="@+id/mv_spinner_company"
