--- a/src/main/res/menu/toolbar_menu.xml
+++ b/src/main/res/menu/toolbar_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
     <menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/shr_search_title" app:showAsAction="always" android:icon="@drawable/shr_search" android:id="@+id/search"/>
+    <item android:title="@string/shr_search_title" app:showAsAction="always" android:icon="@drawable/shrsearch" android:id="@+id/search"/>
 
 <!--    <item android:title="@string/shr_filter_title" app:showAsAction="always" android:icon="@drawable/shr_filter" android:id="@+id/filter"/>-->
 
