--- a/src/main/res/layout/fragment_logbook_full.xml
+++ b/src/main/res/layout/fragment_logbook_full.xml
@@ -12,11 +12,13 @@
         android:id="@+id/rl_topButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:alpha="0.5">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:alpha="0.5">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_new"
@@ -49,6 +51,7 @@
         android:id="@+id/l1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:alpha="0.5"
         android:orientation="vertical">
 
         <ProgressBar
